#UNICIT-57 * Compatibility Update für Confluence 3.4.9 (jQuery.noConflict)

--- a/src/main/resources/templates/ranking/ranking.vm
+++ b/src/main/resources/templates/ranking/ranking.vm
@@ -80,7 +80,7 @@
 
 <!-- Init -->
 <script type="text/javascript">
-    var $j = jQuery.noConflict();
+    var $j = jQuery;
 
     $j(document).ready( function() {
         // Feedback Status
